fix: Updates popover z-index priority

--- a/packages/ui/src/components/molecules/Popover/styles.scss
+++ b/packages/ui/src/components/molecules/Popover/styles.scss
@@ -9,7 +9,7 @@
   --fs-popover-border-radius                         : var(--fs-border-radius);
   --fs-popover-bkg-color                             : var(--fs-color-body-bkg);
   --fs-popover-box-shadow                            : var(--fs-shadow-darker);
-  --fs-popover-z-index                               : var(--fs-z-index-high);
+  --fs-popover-z-index                               : var(--fs-z-index-top);
 
   // Indicator
   --fs-popover-indicator-size                        : var(--fs-spacing-1);
